# stellar_webscrape

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
stellar_webscrape/: config.py  utils.py
stellar_webscrape.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
