[project]
name = "stellar_webscrape"
version = "0.1.1"
authors = [
    { name="Nikitha Krishnan", email="nikithakrishnan123@gmail.com" },
]
description = "A Python package for web scraping."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
